finished css styling relates #26

--- a/aboutussstyles.css
+++ b/aboutussstyles.css
@@ -1,11 +1,18 @@
 main{
     display: flex;
     flex-direction: column;
-}
-.bio{
-    display: flex;
-    background-color: rgb(137, 114, 227);
     max-width: 800px ;    
     margin-left: auto;
     margin-right: auto;
+    
+}
+.bio{
+    display: flex;
+    background-image: url(imgs/jupiter.webp);
+    max-width: 800px ;    
+    margin-left: auto;
+    margin-right: auto;
+    color: azure;
+    margin-top: 4rem;
+    
 }
