--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,8 @@ img {
 /* //////////////////////////  FOOTER  ///////////////////////// */
 
 .footer__menu {
-    padding: 4rem;
+    padding:  1rem 4rem ;
+
 }
 
 /* ///////////////////// BIGGER SCREENS ///////////////// */
